--- a/src/components/Gallery.css
+++ b/src/components/Gallery.css
@@ -4,6 +4,7 @@
     flex-grow: 1;
     max-height: 80%;
     object-fit: contain;
+    border: 2px black;
 }
   
 .image_container{
@@ -74,6 +75,17 @@
     box-shadow: 6px 6px 12px 0px rgba(0,0,0,0.2);
     cursor: pointer;
     transition: 0.25s ease-in-out;
+    background-image: url("../mask.png");
+    background-size: contain;
+}
+
+.frame_overlay{
+    width: 100%;
+    height: 100%;
+    position: relative;
+    background-image: url("../mask.png");
+    opacity: 1;
+    z-index: 2;
 }
 
 .image_frame:hover{
@@ -104,7 +116,8 @@
     box-shadow: 6px 6px 8px 0px rgba(0,0,0,0.3), -6px -6px 8px 0px rgba(0,0,0,0.3);
     transition: 0.66s cubic-bezier( 0.15, 0.01, 0.1, 0.9 );
     transform: rotate(45deg);
-    
+    background-image: url("../mask.png");
+    background-size: contain;
 }
 
 .close_popup{
